--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="resume">
-    <a class="btn download-link" href="cc-resume.pdf" download>Download PDF</a>
+    <a class="btn download-link" href="cc-resume.pdf" download>Download Resume PDF</a>
     <!-- //  INTRO  // -->
     <header>
       <div class="content-wrapper">
@@ -59,14 +59,6 @@
             <a class="btn" href="https://open.spotify.com/show/7JsQ0j7qldRFpHt63AI8Cn" target="_blank">Spotify</a>
           </section>
           
-          <section class="project-item">
-            <img src="images/project-the-wire-ipsum-500px.png" srcset="images/project-the-wire-ipsum-1000px.png 2x" alt="The Wire Ipsum quote generator website">
-            <h3>The Wire Ipsum</h3>
-            <p>After coming back from teaching a JavaScript workshop, I felt inspired to create something just for fun. I realized that of all the placeholder text/lorem ipsum generators available, there was nothing for HBO’s The Wire fans. Generate some content for your projects today. (Warning: Contains explicit language.)</p>
-            <a class="btn" href="https://thewireipsum.com" target="_blank">Website</a>
-          </section>
-        </div>
-      </section>
 
       <!-- //  WORK EXPERIENCE  // -->
       <section class="resume-section">
@@ -88,7 +80,7 @@
   
         <section class="work-item">
           <div class="work-details">
-            <h3>Supervisor-Central Support Operations</h3>
+            <h3>Supervisor-CS Operations</h3>
             <p>Optum/UnitedHealth Group</p>
             <p>October 2019-Present</p>
           </div>
@@ -154,22 +146,13 @@
 
       <ul class="socials">
         <li>
-          <a href="https://www.youtube.com/@madebychristina" target="_blank"><img src="images/icon-logo-youtube.png" alt="My YouTube channel"></a>
-        </li>
-        <li>
-          <a href="https://ko-fi.com/christinatruong" target="_blank"><img src="images/icon-logo-ko-fi.png" alt="My Ko-Fi homepage"></a>
-        </li>
-        <li>
-          <a href="https://medium.com/@christinatruong" target="_blank"><img src="images/icon-logo-medium.png" alt="My Medium homepage"></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/christina.is.online/" target="_blank"><img src="images/icon-logo-instagram.png" alt="My Instagram"></a>
-        </li>
-        <li>
           <a href="https://www.linkedin.com/in/carltoncm22/" target="_blank"><img src="images/icon-logo-linkedin.png" alt="My LinkedIn profile"></a>
         </li>
         <li>
           <a href="https://github.com/carltoncm" target="_blank"><img src="images/icon-logo-github.png" alt="My GitHub profile"></a>
+        </li>
+        <li>
+          <a href="https://public.tableau.com/app/profile/callie.carlton/vizzes" target="_blank"><img src="images/icon-logo-tableau.png" alt="My Tableau profile"></a>
         </li>
       </ul>
     </footer>
