--- a/index.html
+++ b/index.html
@@ -35,22 +35,13 @@
 
       <ul class="socials">
         <li>
-          <a href="https://www.youtube.com/@madebychristina" target="_blank"><img src="images/icon-logo-youtube.png" alt="My YouTube channel"></a>
-        </li>
-        <li>
-          <a href="https://ko-fi.com/christinatruong" target="_blank"><img src="images/icon-logo-ko-fi.png" alt="My Ko-Fi homepage"></a>
-        </li>
-        <li>
-          <a href="https://medium.com/@christinatruong" target="_blank"><img src="images/icon-logo-medium.png" alt="My Medium homepage"></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/christina.is.online/" target="_blank"><img src="images/icon-logo-instagram.png" alt="My Instagram"></a>
-        </li>
-        <li>
           <a href="https://www.linkedin.com/in/carltoncm22/" target="_blank"><img src="images/icon-logo-linkedin.png" alt="My LinkedIn profile"></a>
         </li>
         <li>
           <a href="https://github.com/carltoncm" target="_blank"><img src="images/icon-logo-github.png" alt="My GitHub profile"></a>
+        </li>
+        <li>
+          <a href="https://public.tableau.com/app/profile/callie.carlton/vizzes" target="_blank"><img src="images/icon-logo-tableau.png" alt="My Tableau profile"></a>
         </li>
       </ul>
     </footer>
